tests/NormalTests/paczka2/big_fuzzy/53223143.err
Error in line 3: mkxT S658 37,6
Error in line 16: X3BkefneU2 S458 47,9
Error in line 17: 6GP A278 45,8
Error in line 28: X3BkefneU2 S658 72,0
Error in line 22: Ew6ox4IO S458 11,8
Error in line 31: A278 A278 73,6
Error in line 76: Ew6ox4IO S658 2,1
Error in line 74: A278 S458 33,9
Error in line 88: A278 S538 55,0
Error in line 98: A278 S458 13,5
Error in line 105: 8Ipf A278 66,7
Error in line 108: 6GP A278 58,9
Error in line 111: Ew6ox4IO S538 6,2
Error in line 107: 8Ipf S538 88,2
Error in line 119: Ew6ox4IO S658 12,2
Error in line 126: Ew6ox4IO A278 30,4
Error in line 116: mkxT A278 90,2
Error in line 132: X3BkefneU2 S658 56,6
Error in line 133: X3BkefneU2 A278 58,6
Error in line 131: mkxT S458 87,4
Error in line 118: A278 A278 14,0
Error in line 144: A278 S658 22,2
Error in line 134: X3BkefneU2 S538 51,4
Error in line 147: rxDWKu4xtds S458 86,6
Error in line 127: 6GP S658 35,2
Error in line 145: A278 A278 2,6
Error in line 154: X3BkefneU2 S658 47,7
Error in line 159: X3BkefneU2 S458 53,4
Error in line 183: mkxT S458 17,4
Error in line 194: Ew6ox4IO S658 0,5
Error in line 195: A278 S538 41,7
Error in line 200: rxDWKu4xtds A278 8,7
Error in line 201: Ew6ox4IO S538 46,5
Error in line 202: A278 A278 65,1
Error in line 203: rxDWKu4xtds S458 20,0
Error in line 205: Ew6ox4IO S458 71,9
Error in line 213: rxDWKu4xtds S658 84,6
Error in line 227: 8Ipf S658 25,8
Error in line 232: Ew6ox4IO S538 153,9
Error in line 244: Ew6ox4IO S458 32,8
